--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div class="home_img"><img src="/img/home.png" alt="" /></div>
         </a>
         <a href="#"> <h1 class="logo">쿠폰</h1> </a>
-        <a href="#">
+        <a href="my_coupon.html">
           <div class="My_Offer_Box"><span>MY쿠폰함</span></div>
         </a>
       </header>
