--- a/my_coupon.html
+++ b/my_coupon.html
@@ -13,7 +13,7 @@
 <body>
   <div class="container">
     <header class="header clearfix">
-      <a href="coupon.html">
+      <a href="index.html">
         <div class="home_img">
           <img src="/img/back.png" alt="" />
         </div>
